# owl

./: CMakeLists.txt  README.md  example_a4988.cc  example_neo8m.cc  example_pwm.cc  example_sht31.cc
actuators/: CMakeLists.txt
actuators/Stepper/: AbstractStepper.cc  AbstractStepper.h  CMakeLists.txt  ULN200x.cc  ULN200x.h
actuators/stepper/: A4988.cc  A4988.h  AbstractStepper.cc  AbstractStepper.h  ULN200x.cc  ULN200x.h
common/: Error.h  Ring.h
driver/: CMakeLists.txt  actuators.cc  actuators.h  focuser.cc  focuser.h  gps.cc  gps.h  main.cc  outputs.cc  outputs.h  sensors.cc  sensors.h  stepper.c  worker.cc  worker.h
hal/: gpio.h  i2c.h  pwm.h  spi.h
hal/linux/: Serial.cc  hardware_types.h
hal/pico_pi/: Time.cc  gpio.cc  hardware_types.h  i2c.cc
include/: stepper.h
indi/: CMakeLists.txt  FrameIndi.cc  FrameIndi.h  config.h.cmake  indi_owl.xml.cmake  owl.cc  owl.h
indi/cmake/: FindINDI.cmake
lib/: CMakeLists.txt
lib/include/: Frame.h  FramePosix.h  FrameQueue.h  Hash.h  Time.h  cobd.h  protocol.h
lib/include/os/: Mutex.h  Serial.h  Thread.h
lib/include/os/Posix/: os_types.h
lib/src/: Frame.cc  FramePosix.cc  FrameQueue.cc  Hash.cc  Time.cc  cobd.cc  protocol.cc
lib/src/os/: Mutex.cc
lib/src/os/Posix/: Mutex.cc  Serial.cc  Time.cc
lib/test/: main.cc
old/: CMakeLists.txt  example_a4988.cc  example_neo8m.cc  main.cc
old/actuators/stepper/: AbstractStepper.h  DRV8825.h  ULN200x.h
old/common/: Time.h  crc.h
old/hal/: i2c.h  serial.h
old/hal/linux/: hardware_types.cc
old/hal/pico_pi/: i2c.cc
old/sensors/: SHT31.h
old/toolchains/: arm-none-eabi-gcc.cmake  avr.cmake
sensors/: SHT31.cc  SHT31.h
src/: main.c
toolchains/: avr.cmake
